# Titan-HFT-Market-Maker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.py  dashboard.py  hft_engine  hft_live  run.sh
Quant_Research/: requirements.txt
Quant_Research/models/: latest_model.json
Quant_Research/src/: backtester.py  backtester_bm.py  backtester_gm.py  generate_ou_data.py  generate_tick_data.py  market_sim.py  train_model.py
include/core/: ArenaAllocator.hpp  LockFreeQueue.hpp
include/engine/: OrderBook.hpp
include/strategies/: AvellanedaStoikov.hpp  AvellanedaStoikov_bm.hpp  AvellanedaStoikov_btc_backup.hpp  AvellanedaStoikov_gm.hpp
src/: bindings.cpp
src/engine/: main.cpp  main_backup.cpp  main_backup_btc.cpp
